--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcsh 'Jerba, Massacre of, 1560'
 - !lcsh 'Spain -- Politics and government -- 1556-1598'
 - !lcsh 'Spain -- History -- Philip II, 1556-1598'
+- GITenberg
 title: Estudios históricos del reinado de Felipe II
 url: http://www.gutenberg.org/ebooks/29078
